// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpiler integration test FullComponent.tsx has correct manifest generated 1`] = `
Object {
  "file": "FullComponent.tsx",
  "manifest": Array [
    Object {
      "classname": "AttachPullRequestAction",
      "inputs": Array [
        Object {
          "name": "farmerRefId",
          "type": "string",
        },
        Object {
          "name": "goatId",
          "type": "string",
        },
        Object {
          "name": "feedPandaRefId",
          "type": "string",
        },
        Object {
          "name": "shortPandaRefId",
          "type": "string",
        },
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition",
          "name": "inlineDefinition",
          "payloadFormat": Object {
            "properties": Object {
              "inlineName": Object {
                "description": "inlineName",
                "name": "inlineName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "inlineNumber": Object {
                "description": "inlineNumber",
                "name": "inlineNumber",
                "required": true,
                "schema": Object {
                  "type": "number",
                },
              },
              "other": Object {
                "description": "other",
                "name": "other",
                "required": true,
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "fullPandaName": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fullPandaName",
                  ],
                  "type": "object",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved",
          "name": "feedPandaSaved",
          "payloadFormat": Object {
            "properties": Object {
              "feedPanda": Object {
                "description": "feedPanda",
                "name": "feedPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
              "referenceId": Object {
                "description": "referenceId",
                "name": "referenceId",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved",
          "name": "spongeBobdSaved",
          "payloadFormat": Object {
            "properties": Object {
              "manualreferenceKeyName": Object {
                "description": "manualreferenceKeyName",
                "name": "manualreferenceKeyName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "shortPanda": Object {
                "description": "shortPanda",
                "name": "shortPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
            },
            "type": "object",
          },
        },
      ],
    },
    Object {
      "classname": "InvalidRootComponent",
      "inputs": Array [
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [],
    },
    Object {
      "classname": "FullComponent",
      "inputs": undefined,
      "outputs": undefined,
    },
    Object {
      "classname": "OverridesDecorarorLess",
      "inputs": undefined,
      "outputs": undefined,
    },
  ],
}
`;

exports[`Transpiler integration test FullComponent.tsx match expectation 1`] = `
Object {
  "file": "FullComponent.tsx",
  "postContent": "import { BearerFetch, BearerRef, BearerState, Component, Intent, IntentType, Event, EventEmitter, Prop, Watch, State } from '@bearer/core';
type Panda = {
    fullPandaName: string;
};
@Component({
    tag: 'full-component'
})
export class FullComponent {
    private fetcher: BearerFetch;
    @BearerState()
    @State()
    attachedPullRequests: Array<any>;
    @BearerState({ statePropName: 'goats' })
    @State()
    ducks: Array<any>;
    private fetchResource: BearerFetch;
    @Event({ eventName: \\"bearer-SPONGE_BOB-global-anEvent\\" })
    anEvent: EventEmitter;
    screenRenderer = () => {
        return (<bearer-navigator-screen navigationTitle=\\"Last Screen\\" renderFunc={() => [<h1>Hello Partick</h1>]}/>);
    };
    render() {
        return (<bearer-navigator>
        <bearer-navigator-auth-screen scenarioId=\\"SPONGE_BOB\\"/>
        <bearer-navigator-screen navigationTitle=\\"First Screen\\" renderFunc={() => [<bearer-scrollable fetcher={this.fetcher}/>]}/>
        <bearer-navigator-screen navigationTitle=\\"First Screen\\" renderFunc={() => [<h1>Complex one</h1>,
            <bearer-scrollable fetcher={this.fetcher}/>,
            <span>this text is fine</span>]}/>
        <bearer-navigator-screen navigationTitle={({ data }) => data.name} renderFunc={() => [<bearer-scrollable fetcher={this.fetcher}/>]}/>

        <bearer-navigator-screen renderFunc={({ data, next, prev }) => (<last-screen next={next} complete={({ complete }) => {
            console.log('complete');
            complete();
        }}/>)}/>
        {this.screenRenderer()}
      </bearer-navigator>);
    }
    constructor() {
        Intent('ListRepositories')(this, \\"fetcher\\");
        Intent('getPullRequest', IntentType.FetchData)(this, \\"fetchResource\\");
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
    }
    @Watch(\\"attachedPullRequests\\")
    _notifyBearerStateHandler_attachedPullRequests(newValue: any) {
        this.bearerContext.update(\\"attachedPullRequests\\", newValue);
    }
    @Watch(\\"ducks\\")
    _notifyBearerStateHandler_ducks(newValue: any) {
        this.bearerContext.update(\\"goats\\", newValue);
    }
    componentWillLoad() {
        this.bearerContext.subscribe(this);
    }
    componentDidUnload() {
        this.bearerContext.unsubscribe(this);
    }
    bearerUpdateFromState = state => {
        this.attachedPullRequests = state[\\"attachedPullRequests\\"];
        this.ducks = state[\\"goats\\"];
    };
}
",
}
`;

exports[`Transpiler integration test RootComponent.tsx has correct manifest generated 1`] = `
Object {
  "file": "RootComponent.tsx",
  "manifest": Array [
    Object {
      "classname": "AttachPullRequestAction",
      "inputs": Array [
        Object {
          "name": "farmerRefId",
          "type": "string",
        },
        Object {
          "name": "goatId",
          "type": "string",
        },
        Object {
          "name": "feedPandaRefId",
          "type": "string",
        },
        Object {
          "name": "shortPandaRefId",
          "type": "string",
        },
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition",
          "name": "inlineDefinition",
          "payloadFormat": Object {
            "properties": Object {
              "inlineName": Object {
                "description": "inlineName",
                "name": "inlineName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "inlineNumber": Object {
                "description": "inlineNumber",
                "name": "inlineNumber",
                "required": true,
                "schema": Object {
                  "type": "number",
                },
              },
              "other": Object {
                "description": "other",
                "name": "other",
                "required": true,
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "fullPandaName": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fullPandaName",
                  ],
                  "type": "object",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved",
          "name": "feedPandaSaved",
          "payloadFormat": Object {
            "properties": Object {
              "feedPanda": Object {
                "description": "feedPanda",
                "name": "feedPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
              "referenceId": Object {
                "description": "referenceId",
                "name": "referenceId",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved",
          "name": "spongeBobdSaved",
          "payloadFormat": Object {
            "properties": Object {
              "manualreferenceKeyName": Object {
                "description": "manualreferenceKeyName",
                "name": "manualreferenceKeyName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "shortPanda": Object {
                "description": "shortPanda",
                "name": "shortPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
            },
            "type": "object",
          },
        },
      ],
    },
    Object {
      "classname": "InvalidRootComponent",
      "inputs": Array [
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [],
    },
    Object {
      "classname": "FullComponent",
      "inputs": undefined,
      "outputs": undefined,
    },
    Object {
      "classname": "OverridesDecorarorLess",
      "inputs": undefined,
      "outputs": undefined,
    },
  ],
}
`;

exports[`Transpiler integration test RootComponent.tsx match expectation 1`] = `
Object {
  "file": "RootComponent.tsx",
  "postContent": "import { BearerFetch, BearerState, Intent, IntentType, BearerRef, Event, EventEmitter, Component, Listen, State, Watch, Prop } from '@bearer/core';
type Farmer = {
    fullName: string;
};
type Panda = {
    fullPandaName: string;
};
@Component({
    tag: \\"attach-pull-request-action\\",
    styleUrl: \\"AttachPullRequest.css\\",
    shadow: true
})
export class AttachPullRequestAction {
    private fetcher: BearerFetch;
    @BearerState()
    @State()
    attachedPullRequests: Array<any>;
    @BearerState({ statePropName: 'goats' })
    @State()
    ducks: Array<any>;
    private fetchResource: BearerFetch;
    @Event({ eventName: \\"bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition\\" })
    inlineDefinition: EventEmitter;
    render() {
        return (<bearer-authorized scenarioId=\\"SPONGE_BOB\\">
        <bearer-scrollable fetcher={this.fetcher}/>
      </bearer-authorized>);
    }
    @State()
    farmer: BearerRef<Farmer>;
    @Listen(\\"body:bearer-SPONGE_BOB-AttachPullRequest-farmerSaved\\")
    farmerRefIdChanged(event) {
        if (this.farmerRefId !== event.detail.referenceId) {
            this.farmerRefId = event.detail.referenceId;
        }
        else {
            this._loadFarmer();
        }
    }
    _loadFarmer = () => {
        this.fetcherRetrieveFarmer({ referenceId: this.farmerRefId }).then(({ data }: {
            data: BearerRef<Farmer>;
        }) => {
            if (data) {
                this.farmer = data;
            }
        });
    };
    private fetcherRetrieveFarmer;
    @Watch(\\"farmerRefId\\")
    _watchFarmer(newValueName: string) {
        if (newValueName) {
            this._loadFarmer();
        }
    }
    @Prop({ \\"mutable\\": true })
    farmerRefId: string;
    @State()
    goat: BearerRef<{
        aString: string;
        aNumber: number;
        panda: Panda;
    }>;
    @Listen(\\"body:bearer-SPONGE_BOB-SCOPE-goatMilked\\")
    goatIdChanged(event) {
        if (this.goatId !== event.detail.referenceId) {
            this.goatId = event.detail.referenceId;
        }
        else {
            this._loadGoat();
        }
    }
    _loadGoat = () => {
        this.fetcherRetrieveGoat({ referenceId: this.goatId }).then(({ data }: {
            data: BearerRef<{
                aString: string;
                aNumber: number;
                panda: Panda;
            }>;
        }) => {
            if (data) {
                this.goat = data;
            }
        });
    };
    private fetcherRetrieveGoat;
    @Watch(\\"goatId\\")
    _watchGoat(newValueName: string) {
        if (newValueName) {
            this._loadGoat();
        }
    }
    @Prop({ \\"mutable\\": true })
    goatId: string;
    private saveFeedPanda: BearerFetch<BearerRef<Panda>>;
    @Event({ eventName: \\"bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved\\" })
    feedPandaSaved: EventEmitter;
    @State()
    feedPandaInitial: BearerRef<Panda>;
    @State()
    feedPanda: BearerRef<Panda>;
    @Prop({ \\"mutable\\": true })
    feedPandaRefId: string;
    @Watch(\\"feedPanda\\")
    feedPandaSavedWatcher(newValue) {
        this.saveFeedPanda({ body: { feedPanda: newValue }, referenceId: this.feedPandaRefId }).then(({ referenceId, data }) => {
            this.feedPandaSaved.emit({ referenceId, feedPanda: data || this.feedPanda });
            this.feedPandaRefId = referenceId;
        });
        this.feedPandaInitial = null;
    }
    private fetcherRetrieveFeedPanda;
    _loadFeedPanda = () => {
        this.fetcherRetrieveFeedPanda({ referenceId: this.feedPandaRefId }).then(({ data }: {
            data: BearerRef<Panda>;
        }) => {
            if (data) {
                this.feedPandaInitial = data;
            }
        });
    };
    private manualIntentName: BearerFetch<BearerRef<{
        inlineName: string;
    }>>;
    @Event({ eventName: \\"bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved\\" })
    spongeBobdSaved: EventEmitter;
    @State()
    shortPandaInitial: BearerRef<{
        inlineName: string;
    }>;
    @State()
    shortPanda: BearerRef<{
        inlineName: string;
    }>;
    @Prop({ \\"mutable\\": true })
    shortPandaRefId: string;
    @Watch(\\"manualpropertyWatchedName\\")
    spongeBobdSavedWatcher(newValue) {
        this.manualIntentName({ body: { manuaLIntentPropertyName: newValue }, referenceId: this.shortPandaRefId }).then(({ referenceId: manualreferenceKeyName, data }) => {
            this.spongeBobdSaved.emit({ manualreferenceKeyName, shortPanda: data || this.shortPanda });
            this.shortPandaRefId = manualreferenceKeyName;
        });
        this.shortPandaInitial = null;
    }
    private fetcherRetrieveShortPanda;
    _loadShortPanda = () => {
        this.fetcherRetrieveShortPanda({ referenceId: this.shortPandaRefId }).then(({ data }: {
            data: BearerRef<{
                inlineName: string;
            }>;
        }) => {
            if (data) {
                this.shortPandaInitial = data;
            }
        });
    };
    constructor() {
        Intent('ListRepositories')(this, \\"fetcher\\");
        Intent('getPullRequest', IntentType.FetchData)(this, \\"fetchResource\\");
        Intent(\\"retrieveFarmer\\")(this, \\"fetcherRetrieveFarmer\\");
        Intent(\\"retrieveGoat\\")(this, \\"fetcherRetrieveGoat\\");
        Intent(\\"saveFeedPanda\\")(this, \\"saveFeedPanda\\");
        Intent(\\"retrieveFeedPanda\\")(this, \\"fetcherRetrieveFeedPanda\\");
        Intent(\\"manualIntentName\\")(this, \\"manualIntentName\\");
        Intent(\\"retrieveShortPanda\\")(this, \\"fetcherRetrieveShortPanda\\");
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
        if (this.farmerRefId) {
            this._loadFarmer();
        }
        if (this.feedPandaRefId) {
            this._loadFeedPanda();
        }
        if (this.shortPandaRefId) {
            this._loadShortPanda();
        }
    }
    @Watch(\\"attachedPullRequests\\")
    _notifyBearerStateHandler_attachedPullRequests(newValue: any) {
        this.bearerContext.update(\\"attachedPullRequests\\", newValue);
    }
    @Watch(\\"ducks\\")
    _notifyBearerStateHandler_ducks(newValue: any) {
        this.bearerContext.update(\\"goats\\", newValue);
    }
    componentWillLoad() {
        this.bearerContext.subscribe(this);
    }
    componentDidUnload() {
        this.bearerContext.unsubscribe(this);
    }
    bearerUpdateFromState = state => {
        this.attachedPullRequests = state[\\"attachedPullRequests\\"];
        this.ducks = state[\\"goats\\"];
    };
    @Event({ eventName: \\"attach-pull-request-action-prop-set\\", bubbles: true, cancelable: true })
    propSetEmitter: EventEmitter;
    @Watch(\\"farmerRefId\\")
    farmerRefIdPropSetWatcher(newValue) {
        this.propSetEmitter.emit({ farmerRefId: newValue });
    }
    @Watch(\\"goatId\\")
    goatIdPropSetWatcher(newValue) {
        this.propSetEmitter.emit({ goatId: newValue });
    }
    @Watch(\\"feedPandaRefId\\")
    feedPandaRefIdPropSetWatcher(newValue) {
        this.propSetEmitter.emit({ feedPandaRefId: newValue });
    }
    @Watch(\\"shortPandaRefId\\")
    shortPandaRefIdPropSetWatcher(newValue) {
        this.propSetEmitter.emit({ shortPandaRefId: newValue });
    }
}
",
}
`;

exports[`Transpiler integration test exportObject.ts has correct manifest generated 1`] = `
Object {
  "file": "exportObject.ts",
  "manifest": Array [
    Object {
      "classname": "AttachPullRequestAction",
      "inputs": Array [
        Object {
          "name": "farmerRefId",
          "type": "string",
        },
        Object {
          "name": "goatId",
          "type": "string",
        },
        Object {
          "name": "feedPandaRefId",
          "type": "string",
        },
        Object {
          "name": "shortPandaRefId",
          "type": "string",
        },
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition",
          "name": "inlineDefinition",
          "payloadFormat": Object {
            "properties": Object {
              "inlineName": Object {
                "description": "inlineName",
                "name": "inlineName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "inlineNumber": Object {
                "description": "inlineNumber",
                "name": "inlineNumber",
                "required": true,
                "schema": Object {
                  "type": "number",
                },
              },
              "other": Object {
                "description": "other",
                "name": "other",
                "required": true,
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "fullPandaName": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fullPandaName",
                  ],
                  "type": "object",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved",
          "name": "feedPandaSaved",
          "payloadFormat": Object {
            "properties": Object {
              "feedPanda": Object {
                "description": "feedPanda",
                "name": "feedPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
              "referenceId": Object {
                "description": "referenceId",
                "name": "referenceId",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved",
          "name": "spongeBobdSaved",
          "payloadFormat": Object {
            "properties": Object {
              "manualreferenceKeyName": Object {
                "description": "manualreferenceKeyName",
                "name": "manualreferenceKeyName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "shortPanda": Object {
                "description": "shortPanda",
                "name": "shortPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
            },
            "type": "object",
          },
        },
      ],
    },
    Object {
      "classname": "InvalidRootComponent",
      "inputs": Array [
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [],
    },
    Object {
      "classname": "FullComponent",
      "inputs": undefined,
      "outputs": undefined,
    },
    Object {
      "classname": "OverridesDecorarorLess",
      "inputs": undefined,
      "outputs": undefined,
    },
  ],
}
`;

exports[`Transpiler integration test exportObject.ts match expectation 1`] = `
Object {
  "file": "exportObject.ts",
  "postContent": "class SpongeBobHelper {
    private name: string;
    constructor(name: string) {
        this.name = name;
    }
}
export class PatrickHelper {
    constructor() {
    }
}
export default {
    spongeHelper: SpongeBobHelper,
    patrickHelper: PatrickHelper
};
",
}
`;

exports[`Transpiler integration test invalidRootComponent.tsx has correct manifest generated 1`] = `
Object {
  "file": "invalidRootComponent.tsx",
  "manifest": Array [
    Object {
      "classname": "AttachPullRequestAction",
      "inputs": Array [
        Object {
          "name": "farmerRefId",
          "type": "string",
        },
        Object {
          "name": "goatId",
          "type": "string",
        },
        Object {
          "name": "feedPandaRefId",
          "type": "string",
        },
        Object {
          "name": "shortPandaRefId",
          "type": "string",
        },
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition",
          "name": "inlineDefinition",
          "payloadFormat": Object {
            "properties": Object {
              "inlineName": Object {
                "description": "inlineName",
                "name": "inlineName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "inlineNumber": Object {
                "description": "inlineNumber",
                "name": "inlineNumber",
                "required": true,
                "schema": Object {
                  "type": "number",
                },
              },
              "other": Object {
                "description": "other",
                "name": "other",
                "required": true,
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "fullPandaName": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fullPandaName",
                  ],
                  "type": "object",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved",
          "name": "feedPandaSaved",
          "payloadFormat": Object {
            "properties": Object {
              "feedPanda": Object {
                "description": "feedPanda",
                "name": "feedPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
              "referenceId": Object {
                "description": "referenceId",
                "name": "referenceId",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved",
          "name": "spongeBobdSaved",
          "payloadFormat": Object {
            "properties": Object {
              "manualreferenceKeyName": Object {
                "description": "manualreferenceKeyName",
                "name": "manualreferenceKeyName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "shortPanda": Object {
                "description": "shortPanda",
                "name": "shortPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
            },
            "type": "object",
          },
        },
      ],
    },
    Object {
      "classname": "InvalidRootComponent",
      "inputs": Array [
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [],
    },
    Object {
      "classname": "FullComponent",
      "inputs": undefined,
      "outputs": undefined,
    },
    Object {
      "classname": "OverridesDecorarorLess",
      "inputs": undefined,
      "outputs": undefined,
    },
  ],
}
`;

exports[`Transpiler integration test invalidRootComponent.tsx match expectation 1`] = `
Object {
  "file": "invalidRootComponent.tsx",
  "postContent": "import { BearerFetch, BearerState, Intent, IntentType, Component, Prop, Watch, State } from '@bearer/core';
@Component({
    tag: \\"attach-pull-request-display\\",
    styleUrl: \\"attachPullRequest.css\\",
    shadow: false
})
export class InvalidRootComponent {
    private fetcher: BearerFetch;
    @BearerState()
    @State()
    attachedPullRequests: Array<any>;
    @BearerState({ statePropName: 'goats' })
    @State()
    ducks: Array<any>;
    private fetchResource: BearerFetch;
    render() {
        return <bearer-scrollable fetcher={this.fetcher}/>;
    }
    constructor() {
        Intent('ListRepositories')(this, \\"fetcher\\");
        Intent('getPullRequest', IntentType.FetchData)(this, \\"fetchResource\\");
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
    }
    @Watch(\\"attachedPullRequests\\")
    _notifyBearerStateHandler_attachedPullRequests(newValue: any) {
        this.bearerContext.update(\\"attachedPullRequests\\", newValue);
    }
    @Watch(\\"ducks\\")
    _notifyBearerStateHandler_ducks(newValue: any) {
        this.bearerContext.update(\\"goats\\", newValue);
    }
    componentWillLoad() {
        this.bearerContext.subscribe(this);
    }
    componentDidUnload() {
        this.bearerContext.unsubscribe(this);
    }
    bearerUpdateFromState = state => {
        this.attachedPullRequests = state[\\"attachedPullRequests\\"];
        this.ducks = state[\\"goats\\"];
    };
}
",
}
`;

exports[`Transpiler integration test overrides-decorator.tsx has correct manifest generated 1`] = `
Object {
  "file": "overrides-decorator.tsx",
  "manifest": Array [
    Object {
      "classname": "AttachPullRequestAction",
      "inputs": Array [
        Object {
          "name": "farmerRefId",
          "type": "string",
        },
        Object {
          "name": "goatId",
          "type": "string",
        },
        Object {
          "name": "feedPandaRefId",
          "type": "string",
        },
        Object {
          "name": "shortPandaRefId",
          "type": "string",
        },
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition",
          "name": "inlineDefinition",
          "payloadFormat": Object {
            "properties": Object {
              "inlineName": Object {
                "description": "inlineName",
                "name": "inlineName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "inlineNumber": Object {
                "description": "inlineNumber",
                "name": "inlineNumber",
                "required": true,
                "schema": Object {
                  "type": "number",
                },
              },
              "other": Object {
                "description": "other",
                "name": "other",
                "required": true,
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "fullPandaName": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fullPandaName",
                  ],
                  "type": "object",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved",
          "name": "feedPandaSaved",
          "payloadFormat": Object {
            "properties": Object {
              "feedPanda": Object {
                "description": "feedPanda",
                "name": "feedPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
              "referenceId": Object {
                "description": "referenceId",
                "name": "referenceId",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved",
          "name": "spongeBobdSaved",
          "payloadFormat": Object {
            "properties": Object {
              "manualreferenceKeyName": Object {
                "description": "manualreferenceKeyName",
                "name": "manualreferenceKeyName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "shortPanda": Object {
                "description": "shortPanda",
                "name": "shortPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
            },
            "type": "object",
          },
        },
      ],
    },
    Object {
      "classname": "InvalidRootComponent",
      "inputs": Array [
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [],
    },
    Object {
      "classname": "FullComponent",
      "inputs": undefined,
      "outputs": undefined,
    },
    Object {
      "classname": "OverridesDecorarorLess",
      "inputs": undefined,
      "outputs": undefined,
    },
  ],
}
`;

exports[`Transpiler integration test overrides-decorator.tsx match expectation 1`] = `
Object {
  "file": "overrides-decorator.tsx",
  "postContent": "import { Component, Intent, BearerFetch, IntentType, Prop } from '@bearer/core';
@Component({
    tag: 'overrides-decorator-full'
})
class OverridesDecorarotFull {
    private fetcher: BearerFetch;
    private memberFetcher: BearerFetch;
    constructor() {
        Intent('collectionIntent')(this, \\"fetcher\\");
        Intent('collectionIntent', IntentType.FetchData)(this, \\"memberFetcher\\");
    }
    componentWillLoad() {
        console.log('componentWillLoad');
    }
    componentDidUnload() {
        console.log('componentDidUnload');
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
        console.log('componentDidLoad');
    }
}
",
}
`;

exports[`Transpiler integration test overrides-decorator-less.1.tsx has correct manifest generated 1`] = `
Object {
  "file": "overrides-decorator-less.1.tsx",
  "manifest": Array [
    Object {
      "classname": "AttachPullRequestAction",
      "inputs": Array [
        Object {
          "name": "farmerRefId",
          "type": "string",
        },
        Object {
          "name": "goatId",
          "type": "string",
        },
        Object {
          "name": "feedPandaRefId",
          "type": "string",
        },
        Object {
          "name": "shortPandaRefId",
          "type": "string",
        },
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-inlineDefinition",
          "name": "inlineDefinition",
          "payloadFormat": Object {
            "properties": Object {
              "inlineName": Object {
                "description": "inlineName",
                "name": "inlineName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "inlineNumber": Object {
                "description": "inlineNumber",
                "name": "inlineNumber",
                "required": true,
                "schema": Object {
                  "type": "number",
                },
              },
              "other": Object {
                "description": "other",
                "name": "other",
                "required": true,
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "fullPandaName": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fullPandaName",
                  ],
                  "type": "object",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-feedPandaSaved",
          "name": "feedPandaSaved",
          "payloadFormat": Object {
            "properties": Object {
              "feedPanda": Object {
                "description": "feedPanda",
                "name": "feedPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
              "referenceId": Object {
                "description": "referenceId",
                "name": "referenceId",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
        Object {
          "eventName": "bearer-SPONGE_BOB-AttachPullRequest-spongeBobdSaved",
          "name": "spongeBobdSaved",
          "payloadFormat": Object {
            "properties": Object {
              "manualreferenceKeyName": Object {
                "description": "manualreferenceKeyName",
                "name": "manualreferenceKeyName",
                "required": true,
                "schema": Object {
                  "type": "string",
                },
              },
              "shortPanda": Object {
                "description": "shortPanda",
                "name": "shortPanda",
                "required": true,
                "schema": Object {
                  "type": "any",
                },
              },
            },
            "type": "object",
          },
        },
      ],
    },
    Object {
      "classname": "InvalidRootComponent",
      "inputs": Array [
        Object {
          "name": "setupId",
          "type": "string",
        },
      ],
      "outputs": Array [],
    },
    Object {
      "classname": "FullComponent",
      "inputs": undefined,
      "outputs": undefined,
    },
    Object {
      "classname": "OverridesDecorarorLess",
      "inputs": undefined,
      "outputs": undefined,
    },
  ],
}
`;

exports[`Transpiler integration test overrides-decorator-less.1.tsx match expectation 1`] = `
Object {
  "file": "overrides-decorator-less.1.tsx",
  "postContent": "import { Component, Prop } from '@bearer/core';
@Component({
    tag: 'overrides-decorator-less'
})
class OverridesDecorarorLess {
    constructor() {
    }
    componentWillLoad() {
        console.log('componentWillLoad');
    }
    componentDidUnload() {
        console.log('componentDidUnload');
    }
    get SCENARIO_ID() { return \\"SPONGE_BOB\\"; }
    @Prop({ \\"context\\": \\"bearer\\" })
    bearerContext: any;
    @Prop()
    setupId: string;
    componentDidLoad() {
        if (this.setupId) {
            this.bearerContext.setupId = this.setupId;
        }
        console.log('componentDidLoad');
    }
}
",
}
`;
